code highlight contrast fix

--- a/_scss/components/_syntax.scss
+++ b/_scss/components/_syntax.scss
@@ -2,10 +2,10 @@
 // https://gist.github.com/edwardhotchkiss/2005058
 
 .highlight { 
-  border: 1px solid $border-color;
+  border: 1px solid #cccccc;
   border-radius: 3px;
   padding: $spacing-s $spacing-s;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   font-size: 80%;
   margin: $spacing-m auto;
   overflow: scroll;
